[project]
name = "preprocessing_CHB_MIT_dataset"
version = "1.2.0"
description = "CHB-MIT EEG dataset preprocessing pipeline"
authors = [
  { name="UKON09", email="2418423476@qq.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "mne >= 1.9.0",
  "mne_icalabel >= 0.7.0",
  "pandas >= 2.2.3",
  "numpy >= 2.2.5",
  "matplotlib >= 3.10.0",
  "pytest >= 8.3.4",
  "autoreject >= 0.4.3",
  "tomli >= 2.2.1",
  "edfio >= 0.4.8"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
run-pre = "preprocessing_CHB_MIT_dataset.main:main"

[tool.setuptools]
packages = ["preprocessing_CHB_MIT_dataset"]

[tool.setuptools.package-dir]
preprocessing_CHB_MIT_dataset = "src/preprocessing_CHB_MIT_dataset"